--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,28 +1,31 @@
-.panel.panel-default
-  .panel-heading
-    .row
-      .col-md-1
-        h2 Tasks
-      .col-md-offset-10.col-md-1
-        = link_to 'New Task', new_task_path, class: 'btn btn-primary btn-vertical-align'
-  .panel-body
-    table.table.table-striped.table-hover
-      thead
-        tr
-          th Title
-          th Status
-          th Creator
-          th Owner
-          th
-          th
-      tbody
-        .text-center
-          = paginate @tasks
-        - @tasks.each do |task|
-          tr
-            td = task.title
-            td = t("task.status.#{task.status}")
-            td = task.creator.email
-            td = task.owner&.email
-            td = link_to 'Edit', edit_task_path(task)
-            td = link_to 'Destroy', task, data: { confirm: 'Are you sure?' }, method: :delete
+.row
+  .col-md-2
+    = render 'filters_form'
+  .col-md-10
+    .panel.panel-default
+      .panel-heading
+        .row
+          .col-md-1
+            h2 Tasks
+          .col-md-offset-9.col-md-1
+            = link_to 'New Task', new_task_path, class: 'btn btn-primary btn-vertical-align'
+      .panel-body
+        table.table.table-striped.table-hover
+          thead
+            tr
+              th Title
+              th Status
+              th Creator
+              th Owner
+              th
+              th
+          tbody
+            .text-center
+              = paginate @tasks
+            - @tasks.each do |task|
+              tr
+                td = task.title
+                td = t("task.status.#{task.status}")
+                td = task.creator.email
+                td = task.owner.email
+                td = link_to 'Edit', edit_task_path(task)
