--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,5 +1,14 @@
 h1 New user
 
-== render 'form'
+= simple_form_for(@user) do |f|
+  = f.error_notification
 
-= link_to 'Back', users_path
+  .form-inputs
+    = f.input :email, required: true
+    = f.input :password, required: true
+    = f.input :password_confirmation, required: true
+
+  .form-actions
+    = f.button :submit
+
+= link_to 'Back', users_path, class: 'btn btn-default'
