fix tasks/index tasks/_form,users#create flash

--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -7,7 +7,8 @@
                              collection: generate_transitions_collection(f.object),
                              label_method: :last,
                              value_method: :first,
-                             selected: f.object.status
+                             selected: f.object.status,
+                             label: Task.human_attribute_name(:event)
 
     = f.association :owner, label_method: :email
 
